# api-to-tools

./: .gitignore  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
docs/api/: adapters.md  core.md  parsers.md  types.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: authentication.md  discovery.md  execution.md  llm-integration.md  sdk-generation.md  testing.md  traffic-capture.md
examples/: basic.ts  test-autodiscover.ts  test-graphql.ts  test-grpc-async.ts  test-large-spec.ts  test-mcp.ts  test-wsdl.ts
examples/fixtures/: chat.asyncapi.yaml  greeter.proto
src/: cli.ts  index.ts  types.ts  utils.ts
src/adapters/: index.ts  mcp.ts
src/api_to_tools/: __init__.py  _logging.py  auth.py  cache.py  cli.py  codegen.py  constants.py  core.py  proxy.py  rate_limiter.py  serialization.py  testing.py  types.py  utils.py
src/api_to_tools/adapters/: __init__.py  formats.py  mcp_adapter.py  openapi_export.py
src/api_to_tools/detector/: __init__.py  (+1 more)
src/detector/: index.ts
src/executors/: graphql.ts  index.ts  rest.ts  soap.ts
src/parsers/: asyncapi.ts  graphql.ts  grpc.ts  index.ts  openapi.ts  wsdl.ts
tests/: test_asyncapi_parser.py  test_auth.py  test_browser_utils.py  test_cache.py  test_cli.py  test_codegen.py  test_core.py  test_detector.py  test_executor_registry.py  test_graphql_executor.py  test_grpc_parser.py  test_har.py  test_integration.py  test_mcp_adapter.py  test_new_features.py  test_openapi_export.py  test_openapi_parser.py  test_param_builder.py  test_proxy.py  test_rate_limiter.py  test_security_schemes.py  test_serialization.py  test_ssv.py  test_static_spa.py  test_testing.py  test_token_manager.py  test_utils_and_formats.py
(+21 files in other folders)
